# obs-toys

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: appimage.yml
packaging/linux/: AppRun  build-appimage.sh  io.github.leoberbert.obs_toys.desktop
src/obs_toys/: app.py  catalog.py  github.py  i18n.py  installer.py  models.py  obs.py  ui.py
src/obs_toys/data/: plugins.json
